--- a/ToDo-version-7/index.html
+++ b/ToDo-version-7/index.html
@@ -14,14 +14,14 @@
 
   <!-- ---------------------- logica aplicada en login ----------------------- -->
   <!-- <script src="/scripts/utils.js"></script> -->
-  <script src="/ToDo-version-7/scripts/login.js" defer></script>
+  <script src="/scripts/login.js" defer></script>
 
 </head>
 
 <body>
   
 
-  <div class="right">
+  <div class="logIn">
     <form>
       <div class="form-header">
         <p>To-Do App</p>
@@ -45,7 +45,7 @@
 
     </form>
     <div class="ingresarA">
-      <a href="/ToDo-version-7/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
+      <a href="/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
 
