--- a/ToDo-version-7/index.html
+++ b/ToDo-version-7/index.html
@@ -45,7 +45,7 @@
 
     </form>
     <div class="ingresarA">
-      <a href="/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
+      <a href="/ToDo-version-7/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
 
