--- a/ToDo-version-7/signup.html
+++ b/ToDo-version-7/signup.html
@@ -47,7 +47,7 @@
 
     </form>
     <div class="ingresarA">
-      <a href="index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
+      <a href="/ToDo-version-7/index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
     </div>
   </div>
 
