--- a/ToDo-version-7/signup.html
+++ b/ToDo-version-7/signup.html
@@ -12,14 +12,14 @@
 
   <!-- ---------------------- logica aplicada en register -------------------- -->
   <!-- <script src="/scripts/utils.js"></script> -->
-  <script src="/scripts/signup.js"></script>
+  <script src="/ToDo-version-7/scripts/signup.js"></script>
 
 </head>
 
 <body id="bd1">
 
   <div class="left">
-    <img src="/assets/pexels-breakingpic-3299.jpg" alt="">
+    <img src="/ToDo-version-7/assets/pexels-breakingpic-3299.jpg" alt="">
   </div>
   <div class="right">
     <form>
