--- a/index.html
+++ b/index.html
@@ -132,17 +132,16 @@
                             data-aos-easing="ease-in-back"
                             data-aos-offset="200"
                             data-aos-duration="1000">
-                                <h2 >Hi! I am Leandro</h2>
+                                <h2 >Hi! I am Lea</h2>
                             </div>
                             <div data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back"
                             data-aos-offset="200"
                             data-aos-duration="1000" >
                                 <p > 
-                                    He aqui un entusiasta de las nuevas tecnologías, la naturaleza, el diseño y el equilibrio entre
-                                    estas. Soy creativo, curioso y fan de los puzzles. Me considero un convencido del auto diseño.
-                                    Encontré en la programacion un entorno genial para unir las partes de las que estoy hecho
-                                    y desarrollar nuevas.
+                                    He aquí un entusiasta de las nuevas tecnologías, la naturaleza, el diseño y el equilibrio entre estas. 
+                                    Soy creativo, curioso y fan de los puzzles. Me considero un convencido del auto diseño.
+                                    Encontré en la programación un entorno genial para unir las partes de las que estoy hecho y desarrollar nuevas.
                                 </p>
                             </div>
                             <div data-aos="fade-zoom-in"
@@ -151,7 +150,7 @@
                                 <p >
                                     Actualmente curso una Licenciatura en Informática en la Siglo 21, a 3 materias de obtener mi
                                     titulo intermedio de Técnico
-                                    Universitario de Analisis de Sistemas. 
+                                    Universitario de Analisis de Sistemas.
                                 </p>
                             </div>
                         </div>
