--- a/ToDo-version-7/index.html
+++ b/ToDo-version-7/index.html
@@ -14,7 +14,7 @@
 
   <!-- ---------------------- logica aplicada en login ----------------------- -->
   <!-- <script src="/scripts/utils.js"></script> -->
-  <script src="/scripts/login.js" defer></script>
+  <script src="/ToDo-version-7/scripts/login.js" defer></script>
 
 </head>
 
