--- a/ToDo-version-7/index.html
+++ b/ToDo-version-7/index.html
@@ -14,7 +14,7 @@
 
   <!-- ---------------------- logica aplicada en login ----------------------- -->
   <!-- <script src="/scripts/utils.js"></script> -->
-  <script src="/Trabajos/ToDo-version-7/scripts/login.js" defer></script>
+  <script src="/ToDo-version-7/scripts/login.js" defer></script>
 
 </head>
 
@@ -45,7 +45,7 @@
 
     </form>
     <div class="ingresarA">
-      <a href="/Trabajos/ToDo-version-7/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
+      <a href="/ToDo-version-7/signup.html">¿No tiene una cuenta? Regístrese aquí</a>
     </div>
   </div>
 
