--- a/ToDo-version-7/mis-tareas.html
+++ b/ToDo-version-7/mis-tareas.html
@@ -23,14 +23,14 @@
 
 
   <!-- logica de la página -->
-  <script src="/Trabajos/ToDo-version-7/scripts/tasks.js"></script>
+  <script src="/ToDo-version-7/scripts/tasks.js"></script>
 
 
   <title>ToDo</title>
 </head>
 
 <body id="body">
-  <img id="bg" src="" alt="imagen fondo">
+  <!-- <img id="bg" src="" alt="imagen fondo"> -->
   <header>
     <nav>
       <a href="#">My ToDo's</a>
@@ -110,22 +110,22 @@
     const img = document.getElementById("bg");
 
     btn1.addEventListener('click',()=>{
-      img.src="/Trabajos/ToDo-version-7/assets/pexels-aleksandr-slobodianyk-989941.jpg";
+      img.src="/ToDo-version-7/assets/pexels-aleksandr-slobodianyk-989941.jpg";
     });
     btn2.addEventListener('click',()=>{
-      img.src = "/Trabajos/ToDo-version-7/assets/pexels-azim-islam-1210276.jpg";
+      img.src = "/ToDo-version-7/assets/pexels-azim-islam-1210276.jpg";
     });
     btn3.addEventListener('click',()=>{
-      img.src = "/Trabajos/ToDo-version-7/assets/pexels-julie-aagaard-1426718.jpg";
+      img.src = "/ToDo-version-7/assets/pexels-julie-aagaard-1426718.jpg";
     });
     btn4.addEventListener('click',()=>{
-      img.src = "/Trabajos/ToDo-version-7/assets/pexels-oleg-magni-1040473.jpg";
+      img.src = "/ToDo-version-7/assets/pexels-oleg-magni-1040473.jpg";
     });
     btn5.addEventListener('click',()=>{
-      img.src = "/Trabajos/ToDo-version-7/assets/pexels-rachel-claire-4993230.jpg";
+      img.src = "/ToDo-version-7/assets/pexels-rachel-claire-4993230.jpg";
     });
     btn6.addEventListener('click',()=>{
-      img.src = "/Trabajos/ToDo-version-7/assets/pexels-scott-webb-1029604.jpg";
+      img.src = "/ToDo-version-7/assets/pexels-scott-webb-1029604.jpg";
     });
     
     
