--- a/ToDo-version-7/signup.html
+++ b/ToDo-version-7/signup.html
@@ -12,14 +12,14 @@
 
   <!-- ---------------------- logica aplicada en register -------------------- -->
   <!-- <script src="/scripts/utils.js"></script> -->
-  <script src="/Trabajos/ToDo-version-7/scripts/signup.js"></script>
+  <script src="/ToDo-version-7/scripts/signup.js"></script>
 
 </head>
 
 <body id="bd1">
 
   <div class="left">
-    <img src="/Trabajos/ToDo-version-7/assets/pexels-breakingpic-3299.jpg" alt="">
+    <img src="/ToDo-version-7/assets/pexels-breakingpic-3299.jpg" alt="">
   </div>
   <div class="right">
     <form>
@@ -47,7 +47,7 @@
 
     </form>
     <div class="ingresarA">
-      <a href="/Trabajos/ToDo-version-7/index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
+      <a href="/ToDo-version-7/index.html">¿Ya tiene una cuenta? Ingrese aquí</a>
     </div>
   </div>
 
