--- a/ToDo-version-7/mis-tareas.html
+++ b/ToDo-version-7/mis-tareas.html
@@ -23,7 +23,7 @@
 
 
   <!-- logica de la página -->
-  <script src="/ToDo-version-7/scripts/tasks.js"></script>
+  <script src="./scripts/tasks.js"></script>
 
 
   <title>ToDo</title>
