estilos, social, about me,text changer

--- a/Heroes/index/index.html
+++ b/Heroes/index/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--responsive en HTML-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" 
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==
+    " crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css"/>
-    <title>Document</title>
+
+    <title>Heroes</title>
   </head>
 
   <body>
@@ -28,7 +32,7 @@
       <div class="container">
         <section class="card">
           <div class="card-img batman">
-            <img id="corazon" src="img/Vector.svg" alt="corazon" />
+            <i id="corazon" class="fa-solid fa-heart"></i>
             <img id="fotito" src="img/batman.svg" alt="batman" />
           </div>
           <div class="card-text">
@@ -41,11 +45,14 @@
                 la oscuridad.
             </p>
           </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
         </section>
 
         <section class="card">
           <div class="card-img harley">
-            <img id="corazon" src="img/Vector.svg" alt="corazon" />
+            <i id="corazon" class="fa-solid fa-heart"></i>
             <img id="fotito" src="img/harley.svg" alt="harley" />
           </div>
           <div class="card-text">
@@ -58,11 +65,14 @@
               1992 y se convirtió en una villana recurrente en la serie
             </p>
           </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
         </section>
 
         <section class="card">
           <div class="card-img superman">
-            <img id="corazon" src="img/Vector.svg" alt="corazon" />
+            <i id="corazon" class="fa-solid fa-heart"></i>
             <img id="fotito" src="img/superman.svg" alt="superman" />
           </div>
           <div class="card-text">
@@ -75,11 +85,14 @@
               viviendo en Cleveland, Ohio.
             </p>
           </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
         </section>
 
         <section class="card">
           <div class="card-img ww">
-            <img id="corazon" src="img/Vector.svg" alt="corazon" />
+            <i id="corazon" class="fa-solid fa-heart"></i>
             <img id="fotito" src="img/ww.svg" alt="mujerMaravilla" />
           </div>
           <div class="card-text">
@@ -92,6 +105,9 @@
               Temiscira pero fuera de esta utiliza la identidad secreta de Sta
               Prince.
             </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
           </div>
         </section>
       </div>
