background img banner - arrows wordChanger

--- a/ToDo-version-7/index.html
+++ b/ToDo-version-7/index.html
@@ -38,11 +38,7 @@
       
 
       <button type="submit">Ingresar</button>
-      <div>
-        <img id="spinner" src="./assets/spinner.gif" alt="">
-      </div>
-
-
+      <div class="spinner"></div>
     </form>
     <div class="ingresarA">
       <a href="signup.html">¿No tiene una cuenta? Regístrese aquí</a>
