--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     
                     <div class="wordChanger">
-                        <p>Estudiante de <span>></span> </p>
+                        <p>Estudiante de <span><i class="fas fa-chevron-left" id="arrowRight"></i><i class="fas fa-chevron-left second" id="arrowRight"></i><i class="fas fa-chevron-left third" id="arrowRight"></i></span></p>
                         <ul>
                             <li>&nbsp Licenciatura en Informática</li>
                             <li>Analisis de Sistemas</li>
