--- a/Heroes/index/index.html
+++ b/Heroes/index/index.html
@@ -110,14 +110,254 @@
             <button><a href="">Ver más</a></button>
           </div>
         </section>
+        <section class="card">
+          <div class="card-img batman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/batman.svg" alt="batman" />
+          </div>
+          <div class="card-text">
+            <h2>Batman</h2>
+            <p>
+                A diferencia de la mayoría de los superhéroes, él no posee superpoderes,
+                sino que hace uso de la inteligencia, habilidades de detective, 
+                la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación
+                en su guerra contra el crimen. Batman es un símbolo que representa la luz en
+                la oscuridad.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img harley">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/harley.svg" alt="harley" />
+          </div>
+          <div class="card-text">
+            <h2>Harley Quinn</h2>
+            <p>
+              Harley Quinn es un personaje ficticio creado por los
+              estadounidenses Paul Dini y Bruce Timm para la editorial DC
+              Comics. Quinn hizo su debut en el vigésimo-segundo episodio de
+              Batman: la serie animada, «El favor del Joker», en septiembre de
+              1992 y se convirtió en una villana recurrente en la serie
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img superman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/superman.svg" alt="superman" />
+          </div>
+          <div class="card-text">
+            <h2>Superman</h2>
+            <p>
+              Es un superhéroe que apareció por primera vez en los cómics
+              estadounidenses publicados por DC Comics. El personaje fue creado
+              por el escritor estadounidense Jerry Siegel y el artista
+              canadiense Joe Shuster en 1933 cuando ambos se encontraban
+              viviendo en Cleveland, Ohio.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img ww">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/ww.svg" alt="mujerMaravilla" />
+          </div>
+          <div class="card-text">
+            <h2>Mujer Maravilla</h2>
+            <p>
+              Es una superheroína creada por William Marston para la
+              editorial DC Comics. Es una princesa guerrera de las Amazonas,
+              pueblo ficticio basado en el de las amazonas de la mitología
+              griega. En su tierra natal es conocida como la princesa Diana de
+              Temiscira pero fuera de esta utiliza la identidad secreta de Sta
+              Prince.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+        <section class="card">
+          <div class="card-img batman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/batman.svg" alt="batman" />
+          </div>
+          <div class="card-text">
+            <h2>Batman</h2>
+            <p>
+                A diferencia de la mayoría de los superhéroes, él no posee superpoderes,
+                sino que hace uso de la inteligencia, habilidades de detective, 
+                la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación
+                en su guerra contra el crimen. Batman es un símbolo que representa la luz en
+                la oscuridad.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img harley">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/harley.svg" alt="harley" />
+          </div>
+          <div class="card-text">
+            <h2>Harley Quinn</h2>
+            <p>
+              Harley Quinn es un personaje ficticio creado por los
+              estadounidenses Paul Dini y Bruce Timm para la editorial DC
+              Comics. Quinn hizo su debut en el vigésimo-segundo episodio de
+              Batman: la serie animada, «El favor del Joker», en septiembre de
+              1992 y se convirtió en una villana recurrente en la serie
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img superman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/superman.svg" alt="superman" />
+          </div>
+          <div class="card-text">
+            <h2>Superman</h2>
+            <p>
+              Es un superhéroe que apareció por primera vez en los cómics
+              estadounidenses publicados por DC Comics. El personaje fue creado
+              por el escritor estadounidense Jerry Siegel y el artista
+              canadiense Joe Shuster en 1933 cuando ambos se encontraban
+              viviendo en Cleveland, Ohio.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img ww">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/ww.svg" alt="mujerMaravilla" />
+          </div>
+          <div class="card-text">
+            <h2>Mujer Maravilla</h2>
+            <p>
+              Es una superheroína creada por William Marston para la
+              editorial DC Comics. Es una princesa guerrera de las Amazonas,
+              pueblo ficticio basado en el de las amazonas de la mitología
+              griega. En su tierra natal es conocida como la princesa Diana de
+              Temiscira pero fuera de esta utiliza la identidad secreta de Sta
+              Prince.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+        <section class="card">
+          <div class="card-img batman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/batman.svg" alt="batman" />
+          </div>
+          <div class="card-text">
+            <h2>Batman</h2>
+            <p>
+                A diferencia de la mayoría de los superhéroes, él no posee superpoderes,
+                sino que hace uso de la inteligencia, habilidades de detective, 
+                la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación
+                en su guerra contra el crimen. Batman es un símbolo que representa la luz en
+                la oscuridad.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img harley">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/harley.svg" alt="harley" />
+          </div>
+          <div class="card-text">
+            <h2>Harley Quinn</h2>
+            <p>
+              Harley Quinn es un personaje ficticio creado por los
+              estadounidenses Paul Dini y Bruce Timm para la editorial DC
+              Comics. Quinn hizo su debut en el vigésimo-segundo episodio de
+              Batman: la serie animada, «El favor del Joker», en septiembre de
+              1992 y se convirtió en una villana recurrente en la serie
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img superman">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/superman.svg" alt="superman" />
+          </div>
+          <div class="card-text">
+            <h2>Superman</h2>
+            <p>
+              Es un superhéroe que apareció por primera vez en los cómics
+              estadounidenses publicados por DC Comics. El personaje fue creado
+              por el escritor estadounidense Jerry Siegel y el artista
+              canadiense Joe Shuster en 1933 cuando ambos se encontraban
+              viviendo en Cleveland, Ohio.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
+
+        <section class="card">
+          <div class="card-img ww">
+            <i id="corazon" class="fa-solid fa-heart"></i>
+            <img id="fotito" src="img/ww.svg" alt="mujerMaravilla" />
+          </div>
+          <div class="card-text">
+            <h2>Mujer Maravilla</h2>
+            <p>
+              Es una superheroína creada por William Marston para la
+              editorial DC Comics. Es una princesa guerrera de las Amazonas,
+              pueblo ficticio basado en el de las amazonas de la mitología
+              griega. En su tierra natal es conocida como la princesa Diana de
+              Temiscira pero fuera de esta utiliza la identidad secreta de Sta
+              Prince.
+            </p>
+          </div>
+          <div class="card-button">
+            <button><a href="">Ver más</a></button>
+          </div>
+        </section>
       </div>
     </main>
 
     <footer>
       <p>Todos los derechos reservados a Falcon Leandro</p>
-      <a href="https://github.com/FalconLeandro/Trabajos"
-        ><i class="fab fa-github git git"></i
-      ></a>
+      <a href="https://github.com/FalconLeandro/Trabajos">
+        <i class="fab fa-github git git"></i>
+      </a>
     </footer>
   </body>
 </html>
