--- a/ThanksPage/thanksPage.html
+++ b/ThanksPage/thanksPage.html
@@ -24,7 +24,7 @@
       </div>
       <div>
         <h1>Thanks!</h1>
-        <h3>Tu mensaje me llego, te respondo al toque</h3>
+        <h3>Tu mensaje me llegó, te respondo al toque</h3>
       </div>
     </div>
   </body>
