adding new proyects

--- a/index.html
+++ b/index.html
@@ -147,11 +147,27 @@
             <div class="max-width" >
                 <h3 data-aos="fade-left" data-aos-duration="1000">Portfolio</h3>
                 <div class="carousel owl-carousel" >
-                    
+
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="PetShop/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
-                                <div class="text">Pet Shop</div>
+                            <a target="_blank" href="LemonPie/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                                <div class="text">Lemon Pie</div>
+                                <p>Proyecto de Digital House</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="box">
+                            <a target="_blank" href="Cv/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                                <div class="text">CV Batman</div>
+                                <p>Proyecto de Digital House</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="box">
+                            <a target="_blank" href="Pizzeria/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                                <div class="text">Pizzeria</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
                         </div>
@@ -173,6 +189,23 @@
                             </a>
                         </div>
                     </div>
+                    <div class="card" >
+                        <div class="box">
+                            <a target="_blank" href="PetShop/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                                <div class="text">Pet Shop</div>
+                                <p>Proyecto de Digital House</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="box">
+                            <a target="_blank" href="ExamenPracticoFinal-FE1-LeandroFalcon/index.html"><img src="dist/img/heroes.png" alt="">
+                                <div class="text">Examen Final</div>
+                                <p>Proyecto de Digital House</p>
+                            </a>
+                        </div>
+                    </div>
+                    
                     <div class="card" >
                         <div class="box">
                             <a target="_blank" href="ToDo-version-7/index.html"><img src="dist/img/ToDo.png" alt="">
