--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="LemonPie/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                            <a target="_blank" href="LemonPie/index.html"><img src="dist/img/lemonPie.JPG" alt="">
                                 <div class="text">Lemon Pie</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="Cv/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                            <a target="_blank" href="Cv/index.html"><img src="dist/img/cv.JPG" alt="">
                                 <div class="text">CV Batman</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="Pizzeria/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                            <a target="_blank" href="Pizzeria/index.html"><img src="dist/img/pizza.JPG" alt="">
                                 <div class="text">Pizzeria</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="ExamenPracticoFinal-FE1-LeandroFalcon/index.html"><img src="dist/img/heroes.png" alt="">
+                            <a target="_blank" href="ExamenPracticoFinal-FE1-LeandroFalcon/index.html"><img src="dist/img/examen.JPG" alt="">
                                 <div class="text">Examen Final</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -208,8 +208,16 @@
                     
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="ToDo-version-7/index.html"><img src="dist/img/ToDo.png" alt="">
+                            <a target="_blank" href="ToDo-version-7/index.html"><img src="dist/img/todo.JPG" alt="">
                                 <div class="text">ToDoApp</div>
+                                <p>Proyecto de Digital House</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="box">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/"><img src="dist/img/unknown.png" alt="">
+                                <div class="text">Frontend</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
                         </div>
