fixing pet shop route

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="PetShop/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/PetShop/index.html"><img src="dist/img/CapturaPetshop.PNG" alt="">
                                 <div class="text">Pet Shop</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
