eliminando redundancia portfolio

--- a/Game/index.html
+++ b/Game/index.html
@@ -15,26 +15,26 @@
         <main>
             <div class="marquee">
                 <div class="marquee__inner">
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
                 </div>
             </div>
             <div class="marquee">
                 <div class="marquee__inner">
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
                 </div>
             </div>
             <div class="marquee">
                 <div class="marquee__inner">
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
-                    <span>Bienvenidxs el club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
+                    <span>Bienvenidxs al club —</span>
                 </div>
             </div>
         </main>
