--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="LemonPie/index.html"><img src="dist/img/lemonPie.JPG" alt="">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/LemonPie/index.html"><img src="dist/img/lemonPie.JPG" alt="">
                                 <div class="text">Lemon Pie</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="Cv/index.html"><img src="dist/img/cv.JPG" alt="">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/Cv/index.html"><img src="dist/img/cv.JPG" alt="">
                                 <div class="text">CV Batman</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="Pizzeria/index.html"><img src="dist/img/pizza.JPG" alt="">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/Pizzeria/index.html"><img src="dist/img/pizza.JPG" alt="">
                                 <div class="text">Pizzeria</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
@@ -199,7 +199,7 @@
                     </div>
                     <div class="card" >
                         <div class="box">
-                            <a target="_blank" href="ExamenPracticoFinal-FE1-LeandroFalcon/index.html"><img src="dist/img/examen.JPG" alt="">
+                            <a target="_blank" href="https://falconleandro.github.io/Frontend/ExamenPracticoFinal-FE1-LeandroFalcon/index.html"><img src="dist/img/examen.JPG" alt="">
                                 <div class="text">Examen Final</div>
                                 <p>Proyecto de Digital House</p>
                             </a>
