--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <main >
         <div  class="banner content" id="banner">
             <div class="banner-video">
-               <video  autoplay="" loop="" muted="">
+               <video  autobuffer loop="" autoplay muted>
                    <source src="dist/img/videooFog.mp4">
                    
                 
