--- a/index.html
+++ b/index.html
@@ -388,22 +388,23 @@
                     <div class="col" id="submit">
                         <input type="submit" name="submit" value="SEND">
                     </div>
+                    <div class="social-contact">
+                        <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i></a>
+                        <a target='_blank' href="https://www.linkedin.com/in/leandrofalc%C3%B3n/"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a target='_blank' href="https://www.instagram.com/kronosteo_art/"><i
+                                class="fab fa-instagram-square"></i></a>
+                        <a target='_blank' href="https://api.whatsapp.com/send?phone=5493548583686"><i
+                                class="fab fa-whatsapp"></i></a>
+                        <a target='_blank' href="https://drive.google.com/file/d/1VAIhd_rbayCU6h3ntX3z29q9ygoZFx2e/view?usp=sharing"><i
+                                class="far fa-file-alt"></i></a>
+                    </div>
                 </div>
             </form>
         </div>
     </main>
     <footer>
-        <div class="social-footer">
-            <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i></a>
-            <a target='_blank' href="https://www.linkedin.com/in/leandrofalc%C3%B3n/"><i
-                    class="fab fa-linkedin"></i></a>
-            <a target='_blank' href="https://www.instagram.com/kronosteo_art/"><i
-                    class="fab fa-instagram-square"></i></a>
-            <a target='_blank' href="https://api.whatsapp.com/send?phone=5493548583686"><i
-                    class="fab fa-whatsapp"></i></a>
-            <a target='_blank' href="https://drive.google.com/file/d/1VAIhd_rbayCU6h3ntX3z29q9ygoZFx2e/view?usp=sharing"><i
-                    class="far fa-file-alt"></i></a>
-        </div>
+        
         <div class="credits">
             <a href="#banner"><span>lea</span>dev</a>
             <small>Developed and designed by Leandro Falcón</small>
@@ -421,7 +422,7 @@
     <script src="dist/js/carrusel.js"></script>
     <script src="dist/js/cerrarMenu.js"></script>
     <script src="dist/js/smoothScroll.js"></script>
-    <!-- <script src="dist/js/imgChanger.js"></script> -->
+    <script src="dist/js/imgChanger.js"></script>
     <script async>
         var loader = document.getElementById('preloader');
         window.addEventListener('load', function () {
