--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="about-me " id="about-me">
                     <!-- <input id="about-me" type="button" value=""> -->
                     <div class="img">
-                        <img id="fotoPerfil" src="dist/img/fotoPerfil2.jpg" alt="fotoPerfil" data-aos="fade-zoom-in"
+                        <img id="fotoPerfil" src="dist/img/fotoPerfil-1.png" alt="fotoPerfil" data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back" data-aos-offset="200" data-aos-duration="500">
                     </div>
                     <div class="about-me_texto" id="about-me_texto">
