--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
         <div class="banner content" id="banner">
             <div class="banner-video">
                 <video autobuffer loop="" autoplay muted>
-                    <source src="dist/img/videooFog.mp4">
-
+                    <source src="dist/img/videooFog.mp4" type="video/mp4">
+                    <source src="dist/img/videooFog.avi" type="video/avi">
+                    <source src="dist/img/AnyConv.com__videooFog.h264" type="video/h264">
 
                 </video>
             </div>
@@ -128,6 +129,16 @@
             <div class="max-width">
                 <h3 data-aos="fade-left" data-aos-duration="1000">Portfolio</h3>
                 <div class="carousel owl-carousel">
+                    <div class="card">
+                        <div class="box">
+                            <a target="_blank" href="https://media.makeameme.org/created/get-out-of-cba53a79c0.jpg"><img
+                                    src="https://d2u4q3iydaupsp.cloudfront.net/e91bTvx5YAPJnPNSJOeDGRPmCBTWWKMCCfOGeQz3dkRCwJUcN42Ra9Cf6oI3VhfCmwHoQg9seMLzch66jrDXTbyPxqqQb6z2cXHw8VFsMnjN7d5kIYSY45Kx3FCq3gOI"
+                                    alt="">
+                                <div class="text">Coming Soon</div>
+                                <p>Working in Progress</p>
+                            </a>
+                        </div>
+                    </div>
                     <div class="card">
                         <div class="box">
                             <a target="_blank" href="https://falconleandro.github.io/laberinto/"><img src="dist/img/CapturaLaberinto.png" alt="">
@@ -228,16 +239,7 @@
                         </div>
                     </div>
 
-                    <div class="card">
-                        <div class="box">
-                            <a target="_blank" href="https://media.makeameme.org/created/get-out-of-cba53a79c0.jpg"><img
-                                    src="https://d2u4q3iydaupsp.cloudfront.net/e91bTvx5YAPJnPNSJOeDGRPmCBTWWKMCCfOGeQz3dkRCwJUcN42Ra9Cf6oI3VhfCmwHoQg9seMLzch66jrDXTbyPxqqQb6z2cXHw8VFsMnjN7d5kIYSY45Kx3FCq3gOI"
-                                    alt="">
-                                <div class="text">Coming Soon</div>
-                                <p>Working in Progress</p>
-                            </a>
-                        </div>
-                    </div>
+                    
                     
                 </div>
                 <div class="newOld">
