--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="preloader"></div>
     <div class="social">
         <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i>GitHub</a>
-        <a target='_blank' href="https://www.linkedin.com/in/leandrofalc%C3%B3n/"><i
+        <a target='_blank' href="https://www.linkedin.com/in/leandro-falcon/"><i
                 class="fab fa-linkedin"></i>LinkedIn</a>
         <a target='_blank' href="https://www.instagram.com/kronosteo_art/"><i
                 class="fab fa-instagram-square"></i>Instagram</a>
