--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 class="fab fa-instagram-square"></i>Instagram</a>
         <a target='_blank' href="https://api.whatsapp.com/send?phone=5493548583686"><i
                 class="fab fa-whatsapp"></i>Whatsapp</a>
-        <a target='_blank' href="https://drive.google.com/file/d/1VAIhd_rbayCU6h3ntX3z29q9ygoZFx2e/view?usp=sharing"><i
+        <a target='_blank' href="https://drive.google.com/file/d/1KrQAryIAAbqHtX4g9QyxkWQ2gT_K1xev/view?usp=sharing"><i
                 class="far fa-file-alt"></i>Curriculum</a>
     </div>
     <header id="header" class="main-header">
@@ -100,6 +100,7 @@
                             <li>Certified Tech Developer</li>
                         </ul>
                     </div>
+                    <div class="scroll-arrow"><a href="#about-me"></a></div>
                 </div>
                 
 
