--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <main>
         <div class="banner content" id="banner">
             <div class="banner-video">
-                <video autobuffer loop="" autoplay muted>
-                    <source src="dist/img/videooFog.mp4" type="video/mp4">
+                <video autobuffer loop="" autoplay muted poster="dist/img/pexels-mohan-reddy-6011465 (2).jpg">
+                    <source src="dist/img/videooFog.mp" type="video/mp4">
 
                 </video>
             </div>
@@ -374,7 +374,7 @@
             <h3 data-aos="fade-left" data-aos-duration="1000">Contact</h3>
             <form action="https://formsubmit.co/467991df3709f0196227989efe2b1fd6" method="POST" class="container"
                 data-aos="fade-right" data-aos-duration="1000">
-                <input type="hidden" name="_next" value=https://portfolio-thankspage.000webhostapp.com />
+                <input type="hidden" name="_next" value=https://falconleandro.github.io/ThanksPage />
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Mensaje desde el Portfolio wachin!!!">
                 <div class="row100">
@@ -416,7 +416,7 @@
                     </div>
                     <div class="social-contact">
                         <a target="_blank" href="https://github.com/FalconLeandro"><i class="fab fa-github-square"></i></a>
-                        <a target='_blank' href="https://www.linkedin.com/in/leandrofalc%C3%B3n/"><i
+                        <a target='_blank' href="https://www.linkedin.com/in/leandro-falcon/"><i
                                 class="fab fa-linkedin"></i></a>
                         <a target='_blank' href="https://www.instagram.com/kronosteo_art/"><i
                                 class="fab fa-instagram-square"></i></a>
