--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <main>
         <div class="banner content" id="banner">
             <div class="banner-video">
-                <video autobuffer loop="" autoplay muted poster="dist/img/pexels-mohan-reddy-6011465 (2).jpg">
-                    <source src="dist/img/videooFog.mp" type="video/mp4">
+                <video autobuffer loop="" autoplay muted >
+                    <source src="dist/img/videooFog.mp4" type="video/mp4">
 
                 </video>
             </div>
