--- a/index.html
+++ b/index.html
@@ -165,7 +165,15 @@
                         <div class="box">
                             <img id="105" src="dist/img/unknown.png" alt="">
                             <div class="text">Trabajos Frontend 1</div>
-                            <p>Cards Desing</p>
+                            <p>Digital House</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="box">
+                            <img id="106" src="dist/img/reactCaptura.png" alt="">
+                            <div class="text">Trabajos React 1</div>
+                            <p>Free-Code Camp</p>
+                            
                         </div>
                     </div>
                     <div class="card">
